--- a/doc/16340036_陈曦/16340036陈曦个人报告.md
+++ b/doc/16340036_陈曦/16340036陈曦个人报告.md
@@ -10,7 +10,7 @@
 
 **天空盒及文本渲染最终效果如下：**
 
-![skybox&text](E:\project\CG_Final\doc\16340036_陈曦\images\skybox&text.gif)
+![skybox&text](https://github.com/cg-final-project/CG_Final/blob/master/doc/16340036_%E9%99%88%E6%9B%A6/images/skybox%26text.gif)
 
 **Sky Box（天空盒）：**
 
@@ -18,7 +18,7 @@
 
 首先在网上找了几份六张天空盒素材照片，最后根据与篮球场适配度选择了下面的素材：
 
-![Skansen4](E:\project\CG_Final\doc\16340036_陈曦\images\Skansen4.jpg)
+![Skansen4](https://github.com/cg-final-project/CG_Final/blob/master/doc/16340036_%E9%99%88%E6%9B%A6/images/Skansen4.jpg)
 
 参考LearnOpenGL网站中有关天空盒部分，通过使用下面的函数加载天空盒：
 
