--- a/doc/16340013_曾翔/16340013-曾翔个人报告.md
+++ b/doc/16340013_曾翔/16340013-曾翔个人报告.md
@@ -6,7 +6,7 @@
 
 ### 光照
 
-在项目中使用的是Phone光照模型。
+在项目中使用的是phong光照模型。
 
 ```
 vec3 ambient = light.ambient * Diffuse.rgb;
@@ -29,7 +29,7 @@ vec3 ambient = light.ambient * Diffuse.rgb;
 
 效果图如下：
 
-![1563558047747](C:\Users\25755\AppData\Roaming\Typora\typora-user-images\1563558047747.png)
+[光照](https://github.com/cg-final-project/CG_Final/blob/master/doc/images/%E5%85%89%E7%85%A7.jpg)
 
 ### 阴影
 
@@ -80,7 +80,7 @@ float bias = max(0.05 * (1.0 - dot(normal, lightDir)), 0.005);
 
 最终获得的阴影效果如下图：
 
-![1563558080091](C:\Users\25755\AppData\Roaming\Typora\typora-user-images\1563558080091.png)
+[阴影](https://github.com/cg-final-project/CG_Final/blob/master/doc/images/%E9%98%B4%E5%BD%B1%E6%95%88%E6%9E%9C.jpg)
 
 ### 个人感想
 
